--- a/project2 solution/project2 solution/project2 solution.vcxproj
+++ b/project2 solution/project2 solution/project2 solution.vcxproj
@@ -147,8 +147,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\book.cpp" />
+    <ClCompile Include="..\..\employee.cpp" />
     <ClCompile Include="..\..\library.cpp" />
     <ClCompile Include="..\..\main.cpp" />
+    <ClCompile Include="..\..\pQueue.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\Project 2.pdf" />
@@ -158,7 +160,9 @@
   <ItemGroup>
     <ClInclude Include="..\..\book.hpp" />
     <ClInclude Include="..\..\Date.h" />
+    <ClInclude Include="..\..\employee.hpp" />
     <ClInclude Include="..\..\library.hpp" />
+    <ClInclude Include="..\..\pQueue.hpp" />
     <ClInclude Include="..\..\StringTokenizer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
